--- a/index.html
+++ b/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body>
-    
+
+<body onload="init()">
+
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Quizapp</a>
+        </div>
+    </nav>
+
+    <div class="centre">
+        <div class="card quiz-card">
+            <div class="card-body">
+                <h5 class="card-title" id="question_text">Frage</h5>
+
+                <div class="card mb-2">
+                    <div class="card-body" id="answer_1">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2">
+                    <div class="card-body" id="answer_2">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2">
+                    <div class="card-body" id="answer_3">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2">
+                    <div class="card-body" id="answer_4">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="question-footer">
+                    <div>
+                        <span>
+                            <b>1</b>von <b id="question-lenght"></b> Fragen
+                        </span>
+                    </div>
+                    <div>
+                        <button class="btn btn-secondary"><</button>
+                        <button class="btn btn-secondary">></button>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
 </body>
+
 </html>
