--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
             <div class="card-body">
                 <h5 class="card-title" id="question_text">Frage</h5>
 
-                <div class="card mb-2">
+                <div class="card answer-cart mb-2" onclick="answer('answer_1')">
                     <div class="card-body" id="answer_1">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card mb-2">
+                <div class="card answer-cart mb-2" onclick="answer('answer_2')">
                     <div class="card-body" id="answer_2">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card mb-2">
+                <div class="card answer-cart mb-2" onclick="answer('answer_3')">
                     <div class="card-body" id="answer_3">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card mb-2">
+                <div class="card answer-cart mb-2" onclick="answer('answer_4')">
                     <div class="card-body" id="answer_4">
                         Antwort
                     </div>
@@ -55,8 +55,8 @@
                         </span>
                     </div>
                     <div>
-                        <button class="btn btn-secondary"><</button>
-                        <button class="btn btn-secondary">></button>
+                        <button class="btn btn-secondary" id="next" disabled><</button>
+                        <button class="btn btn-secondary" id="prev" disabled>></button>
                     </div>
 
                 </div>
