--- a/index.html
+++ b/index.html
@@ -19,9 +19,25 @@
         </div>
     </nav>
 
+    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" id="progress-bar" style="width: 0%"></div>
+      </div>
+
     <div class="centre">
         <div class="card quiz-card">
             <div class="card-body">
+
+                <div class="card answer-cart mb-2 d-none" id="endscreen" >
+                    <div class="card-body centre-endscreen">
+                        <img src="img/brain result.png">
+                        <span>Quiz Complete</span>
+                        <span>YOUR SCORE <b id="right-answers-amount"></b>/<b id="question-lenght-end"></b></span>
+                        <button type="button" class="btn btn-primary" onclick="restart()">Erneut Spielen</button>
+                    </div>
+                </div>
+
+
+
                 <h5 class="card-title" id="question_text">Frage</h5>
 
                 <div class="card answer-cart mb-2" onclick="answer('answer_1')">
@@ -48,15 +64,15 @@
                     </div>
                 </div>
 
-                <div class="question-footer">
+                <div class="question-footer" id="question-footer">
                     <div>
                         <span>
-                            <b>1</b>von <b id="question-lenght"></b> Fragen
+                            <b id="current-question"></b>von <b id="question-lenght"></b> Fragen
                         </span>
                     </div>
                     <div>
-                        <button class="btn btn-secondary" id="next" disabled><</button>
-                        <button class="btn btn-secondary" id="prev" disabled>></button>
+                        <button class="btn1 btn btn-secondary" id="prev" disabled><</button>
+                        <button onclick="nextQuestion()" class="btn1 btn btn-secondary" id="next" disabled>></button>
                     </div>
 
                 </div>
