--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quizapp</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
@@ -71,7 +72,6 @@
                         </span>
                     </div>
                     <div>
-                        <button class="btn1 btn btn-secondary" id="prev" disabled><</button>
                         <button onclick="nextQuestion()" class="btn1 btn btn-secondary" id="next" disabled>></button>
                     </div>
 
